volexc/tests/ui/parse_invalid_item_keyword.vol
// Invalid top-level keyword
function Foo {
}
